feat: add contact api and improve case study layouts
- Add serverless API endpoint for sending Telegram messages via environment variables
- Update case study pages to use standardized problem/solution/benefits layout
- Improve mobile navigation button responsiveness with fluid width and vertical stacking
- Enhance environment variable loading with better error handling and file protocol detection
- Add i18n support for FAQ and about page content sections

--- a/about.html
+++ b/about.html
@@ -213,36 +213,28 @@
               <h4 data-i18n="about.edu.hillel.school">DesignHillel</h4>
               <span class="meta" data-i18n="about.edu.hillel.meta">UI/UX</span>
               <span class="date" data-i18n="about.edu.hillel.date">2022–2023</span>
-              <ul>
-                <li data-i18n="about.edu.hillel.desc">Comprehensive UI/UX training focused on user-centered design, interface logic, and real-world product workflows. Covered UX research fundamentals, user flows, wireframing, prototyping, and usability principles, with strong attention to visual hierarchy and interaction design. Worked on practical projects simulating real client tasks and product scenarios.</li>
-              </ul>
+              <p data-i18n="about.edu.hillel.desc">Comprehensive UI/UX training focused on user-centered design, interface logic, and real-world product workflows. Covered UX research fundamentals, user flows, wireframing, prototyping, and usability principles, with strong attention to visual hierarchy and interaction design. Worked on practical projects simulating real client tasks and product scenarios.</p>
             </div>
 
             <div class="timeline-item">
               <h4 data-i18n="about.edu.cursor.school">Cursor</h4>
               <span class="meta" data-i18n="about.edu.cursor.meta">UI/UX Design/Graphic Design</span>
               <span class="date" data-i18n="about.edu.cursor.date">2020</span>
-              <ul>
-                <li data-i18n="about.edu.cursor.desc">Intensive course covering UI/UX design and graphic design fundamentals. Focused on composition, typography, color systems, layout structure, and brand consistency, combined with UX basics and interface design for web products. Developed design thinking skills and the ability to translate ideas into clear visual solutions.</li>
-              </ul>
+              <p data-i18n="about.edu.cursor.desc">Intensive course covering UI/UX design and graphic design fundamentals. Focused on composition, typography, color systems, layout structure, and brand consistency, combined with UX basics and interface design for web products. Developed design thinking skills and the ability to translate ideas into clear visual solutions.</p>
             </div>
 
             <div class="timeline-item">
               <h4 data-i18n="about.edu.designspot.school">DesignSpot</h4>
               <span class="meta" data-i18n="about.edu.designspot.meta">UI/UX Design/Graphic Design</span>
               <span class="date" data-i18n="about.edu.designspot.date">2019–2020</span>
-              <ul>
-                <li data-i18n="about.edu.designspot.desc">UI/UX and graphic design program focused on visual communication and interface fundamentals. Studied user interface patterns, design systems basics, branding principles, and visual problem-solving. Worked on practical assignments aimed at building consistency, clarity, and usability in digital products.</li>
-              </ul>
+              <p data-i18n="about.edu.designspot.desc">UI/UX and graphic design program focused on visual communication and interface fundamentals. Studied user interface patterns, design systems basics, branding principles, and visual problem-solving. Worked on practical assignments aimed at building consistency, clarity, and usability in digital products.</p>
             </div>
 
             <div class="timeline-item">
               <h4 data-i18n="about.edu.lemon.school">Lemon School</h4>
               <span class="meta" data-i18n="about.edu.lemon.meta">UI/UX Design</span>
               <span class="date" data-i18n="about.edu.lemon.date">2018</span>
-              <ul>
-                <li data-i18n="about.edu.lemon.desc">Foundational UI/UX design course introducing user experience principles and interface design basics. Covered UX thinking, wireframing, interface structure, and usability fundamentals. Built a strong base for further development in product and interface design.</li>
-              </ul>
+              <p data-i18n="about.edu.lemon.desc">Foundational UI/UX design course introducing user experience principles and interface design basics. Covered UX thinking, wireframing, interface structure, and usability fundamentals. Built a strong base for further development in product and interface design.</p>
             </div>
           </div>
         </details>
