--- a/cases/hub/index.html
+++ b/cases/hub/index.html
@@ -12,16 +12,6 @@
   <link rel="stylesheet" href="../../cases.css">
   <style>
     /* Project-specific styles for Languages of Love */
-    .case-layout {
-      gap: 24px;
-    }
-
-    .case-hero {
-      background: transparent;
-      box-shadow: none;
-      padding: 0;
-      margin-bottom: 0;
-    }
 
 
 
@@ -233,13 +223,17 @@
 
         <!-- Project Details -->
         <section class="case-content-grid">
-          <div class="content-block">
-            <h3 data-i18n="case.challenge.title">The Challenge</h3>
-            <p data-i18n="case.lovelang.challenge.desc">Translating the intangible concept of "love languages" into a tangible, digital experience. The goal was to create a warm, inviting interface that feels personal and safe without being overly cloying.</p>
+          <div class="content-block problem-section">
+            <h3 data-i18n="case.lovelang.problem.title">Problem 😔</h3>
+            <div data-i18n="case.lovelang.problem.desc">Partners often have different love languages (based on Gary Chapman's theory: Words of Affirmation, Quality Time, Receiving Gifts, Acts of Service, Physical Touch).<br><br>One person shows love through compliments and verbal encouragement, another through helping with chores or physical closeness, while a third values undivided attention and shared experiences.<br><br><b>When these styles don't match, it creates misunderstandings:</b><ul><li>“I try so hard, but they don’t appreciate it!”</li><li>Feeling unloved even when love is being given — just in the “wrong” way.</li><li>Emotional distance, resentment, reduced intimacy, and a gradual decline in relationship satisfaction.</li><li>Over time: frustration, loneliness within the couple, frequent arguments, and even risk of breakup.</li></ul><p><b>The core pain for users:</b> “I love them, but I feel unloved,” “My efforts don’t reach my partner,” “We’re speaking different emotional languages — and it’s damaging our connection.”</p></div>
           </div>
-          <div class="content-block">
-            <h3 data-i18n="case.visual.title">Visual Direction</h3>
-            <p data-i18n="case.lovelang.visual.desc">I chose a soft palette of pinks and warm whites, paired with rounded typography to evoke gentleness. The card-based interaction mimics the feeling of playing a game or drawing a tarot card.</p>
+          <div class="content-block solution-section">
+            <h3 data-i18n="case.lovelang.solution.title">Solution 💡</h3>
+            <div data-i18n="case.lovelang.solution.desc">Our app analyzes your partner’s current mood, preferences, and love language signals (through mood tracking, shared notes, message patterns, quick check-ins, interaction logs, and self-reported data). It then delivers highly personalized, real-time suggestions for actions that speak directly to their primary/current love language:<ul><li>“Your partner is feeling low today — send a heartfelt voice note with words of affirmation.”</li><li>“They’ve had a stressful day — plan a phone-free cozy evening together (Quality Time).”</li><li>“Acts of Service would mean the most right now — surprise them by handling dinner or a small chore.”</li></ul><p>Daily gentle nudges, specific ideas, reminders, and progress tracking to help you consistently express love in the way that actually lands.</p></div>
+          </div>
+          <div class="content-block benefits-section">
+            <h3 data-i18n="case.lovelang.benefits.title">What users get</h3>
+            <div data-i18n="case.lovelang.benefits.desc"><ul><li><b>Deeper emotional connection</b> — love is received and felt the way the partner truly needs it.</li><li><b>Far fewer misunderstandings</b> — the app explains why “I’m trying, but it’s not working” and fixes it.</li><li><b>Warmer, more loving atmosphere</b> — small, precise gestures build closeness, trust, and daily warmth.</li><li><b>Proactive relationship support</b> — instead of guessing or fighting over “why don’t you appreciate me?”, the app tells you exactly what works right now.</li></ul><p>Ultimately, the app transforms the classic “mismatched love languages” problem into a superpower: you learn to speak your partner’s language fluently, making the relationship more harmonious, fulfilling, and resilient.</p></div>
           </div>
         </section>
 
@@ -247,7 +241,7 @@
     </main>
   </div>
   
-  <script src="../../translations.js"></script>
+  <script src="../../translations.js?v=3"></script>
   <script src="../../script.js" defer></script>
 </body>
 </html>
