--- a/cases/itreal/index.html
+++ b/cases/itreal/index.html
@@ -12,16 +12,6 @@
   <link rel="stylesheet" href="../../cases.css">
   <style>
     /* Project-specific styles for RealFace */
-    .case-layout {
-      gap: 24px;
-    }
-
-    .case-hero {
-      background: transparent;
-      box-shadow: none;
-      padding: 0;
-      margin-bottom: 0;
-    }
 
 
   </style>
@@ -101,19 +91,24 @@
 
         <!-- Project Details -->
         <section class="case-content-grid">
-          <div class="content-block">
-            <h3 data-i18n="case.concept.title">Concept</h3>
-            <p data-i18n="case.realface.concept.desc">RealFace is a SAAS platform designed to streamline facial recognition integration for businesses. The interface focuses on clarity and ease of use, with a modern, tech-forward aesthetic.</p>
+          <div class="content-block problem-section">
+            <h3 data-i18n="case.realface.problem.title">Problem: "Real Face" Issue in Online Dating</h3>
+            <div data-i18n="case.realface.problem.desc"></div>
           </div>
-          <div class="content-block">
-            <h3 data-i18n="case.features.title">Key Features</h3>
-            <p data-i18n="case.realface.features.desc">Real-time analytics, user management, and seamless API integration were the core requirements. The dashboard provides actionable insights at a glance.</p>
+          <div class="content-block solution-section">
+            <h3 data-i18n="case.realface.solution.title">How the project solves the "Real Face" problem</h3>
+            <div data-i18n="case.realface.solution.desc"></div>
+          </div>
+          <div class="content-block benefits-section">
+            <h3 data-i18n="case.realface.benefits.title">Key benefits for users</h3>
+            <div data-i18n="case.realface.benefits.desc"></div>
           </div>
         </section>
 
       </div>
     </main>
   </div>
+  
   
   <script src="../../translations.js"></script>
   <script src="../../config.js"></script>
