--- a/faq.html
+++ b/faq.html
@@ -302,31 +302,31 @@
 
           <details class="accordion-item">
             <summary class="accordion-header">
-              <h2>✨ Describe your ideal working environment</h2>
+              <h2 data-i18n="faq.hr.environment.title">✨ Describe your ideal working environment</h2>
               <span class="arrow"></span>
             </summary>
             <div class="accordion-body">
-              <p>I’m looking for a friendly and supportive team that values its members and strives to build transparent, effective processes. In such an environment, it’s possible to grow both the product and personally, experiment with approaches, improve team workflows, and create solutions that genuinely help users.</p>
+              <p data-i18n="faq.hr.environment.text">I’m looking for a friendly and supportive team that values its members and strives to build transparent, effective processes. In such an environment, it’s possible to grow both the product and personally, experiment with approaches, improve team workflows, and create solutions that genuinely help users.</p>
             </div>
           </details>
 
           <details class="accordion-item">
             <summary class="accordion-header">
-              <h2>🔍 Why are you looking for a new job?</h2>
+              <h2 data-i18n="faq.hr.newjob.title">🔍 Why are you looking for a new job?</h2>
               <span class="arrow"></span>
             </summary>
             <div class="accordion-body">
-              <p>The current project has been successfully completed, and no new large-scale challenges are expected in the near future. I want to continue growing and working on products with a strong user focus. I am looking for a company where there are meaningful challenges, the opportunity to influence the product, and a team that actively experiments with new approaches.</p>
+              <p data-i18n="faq.hr.newjob.text">The current project has been successfully completed, and no new large-scale challenges are expected in the near future. I want to continue growing and working on products with a strong user focus. I am looking for a company where there are meaningful challenges, the opportunity to influence the product, and a team that actively experiments with new approaches.</p>
             </div>
           </details>
 
           <details class="accordion-item">
             <summary class="accordion-header">
-              <h2>🔮 Where do you see yourself in five years?</h2>
+              <h2 data-i18n="faq.hr.fiveyears.title">🔮 Where do you see yourself in five years?</h2>
               <span class="arrow"></span>
             </summary>
             <div class="accordion-body">
-              <p>In five years, I see myself in a senior or lead UX designer role, or as a design lead of a small team. I want to deeply develop my expertise in product design, user research, and strategic thinking — helping companies build products that genuinely solve user problems. I plan to mentor junior designers, contribute to building design systems, and influence product strategy. Ideally, I want to grow within a strong team where design has equal standing with business and development.</p>
+              <p data-i18n="faq.hr.fiveyears.text">In five years, I see myself in a senior or lead UX designer role, or as a design lead of a small team. I want to deeply develop my expertise in product design, user research, and strategic thinking — helping companies build products that genuinely solve user problems. I plan to mentor junior designers, contribute to building design systems, and influence product strategy. Ideally, I want to grow within a strong team where design has equal standing with business and development.</p>
             </div>
           </details>
 
