fix(css): add cache busting and adjust case study layout
Add version query parameter to cases.css links to prevent browser caching issues. Refactor case study layout to use flexbox instead of grid for better width control and consistency. Remove unnecessary backgrounds and shadows from hero sections, and ensure content blocks stretch to full width.

--- a/cases/sunrise/index.html
+++ b/cases/sunrise/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Briem+Hand:wght@200;400;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../../style.css">
   <link rel="stylesheet" href="../../about.css">
-  <link rel="stylesheet" href="../../cases.css">
+  <link rel="stylesheet" href="../../cases.css?v=10">
   <style>
     /* Project-specific styles for Sunrise */
 
