--- a/cases/other/index.html
+++ b/cases/other/index.html
@@ -9,9 +9,48 @@
   <link href="https://fonts.googleapis.com/css2?family=Briem+Hand:wght@200;400;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../../style.css">
   <link rel="stylesheet" href="../../about.css">
-  <link rel="stylesheet" href="../../cases.css?v=11">
+  <link rel="stylesheet" href="../../cases.css?v=12">
 </head>
 <body>
+  <!-- Mobile Header -->
+  <header class="mobile-header">
+    <div class="mobile-logo">Portfolio</div>
+    <button class="burger-btn" aria-label="Toggle menu">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+  </header>
+
+  <!-- Mobile Nav Overlay -->
+  <div class="mobile-nav-overlay">
+    <nav class="mobile-nav-links">
+      <a href="../../index.html" class="mobile-nav-link"><span>🏠</span> <span data-i18n="nav.home">Home</span></a>
+      <a href="../../about.html" class="mobile-nav-link"><span>🙋‍♀️</span> <span data-i18n="nav.about">About Me</span></a>
+      <a href="../../skills.html" class="mobile-nav-link"><span>🛠️</span> <span data-i18n="nav.skills">Tools & Skills</span></a>
+      <a href="../../cases.html" class="mobile-nav-link"><span>💼</span> <span data-i18n="nav.cases">Cases</span></a>
+      <a href="../../faq.html" class="mobile-nav-link"><span>❓</span> <span data-i18n="nav.faq">FAQ</span></a>
+    </nav>
+    
+    <div class="mobile-social-icons">
+      <a href="https://www.behance.net/anjelikali508d" target="_blank" class="mobile-social-link">
+        <img src="../../src/Photo/Logos/behance.svg" alt="Behance">
+      </a>
+      <a href="https://www.linkedin.com/in/anjelikaliashenko/" target="_blank" class="mobile-social-link">
+        <img src="../../src/Photo/Logos/Linkedin.svg" alt="LinkedIn">
+      </a>
+      <a href="https://github.com/Likalsnk" target="_blank" class="mobile-social-link">
+        <img src="../../src/Photo/Logos/github.svg" alt="GitHub">
+      </a>
+      <a href="https://t.me/likalsnk" target="_blank" class="mobile-social-link">
+        <img src="../../src/Photo/Logos/telegram.svg" alt="Telegram">
+      </a>
+      <a href="mailto:anjelika.liashenko@gmail.com" target="_blank" class="mobile-social-link">
+        <img src="../../src/Photo/Logos/Gmail.svg" alt="Gmail">
+      </a>
+    </div>
+  </div>
+
   <div class="layout-wrapper">
     <aside class="sidebar">
       <nav class="sidebar-nav">
