--- a/cases/sunrise/index.html
+++ b/cases/sunrise/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Briem+Hand:wght@200;400;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../../style.css">
   <link rel="stylesheet" href="../../about.css">
-  <link rel="stylesheet" href="../../cases.css?v=12">
+  <link rel="stylesheet" href="../../cases.css?v=14">
   <style>
     /* Project-specific styles for Sunrise */
 
@@ -178,7 +178,7 @@
             <div data-i18n="case.sunrise.problem.desc"></div>
           </div>
           <div class="content-block solution-section">
-            <h3 data-i18n="case.sunrise.solution.title">What you did to solve the problem</h3>
+            <h3 data-i18n="case.sunrise.solution.title">What I did to solve the problem</h3>
             <div data-i18n="case.sunrise.solution.desc"></div>
           </div>
           <div class="content-block benefits-section">
