chore: add contentsquare analytics script to all html pages
Add the same external analytics script to enable user experience tracking across the entire website. This ensures consistent analytics collection on the main pages and all case study pages.

--- a/cases/hub/index.html
+++ b/cases/hub/index.html
@@ -149,6 +149,7 @@
       transition: width 0.3s ease;
     }
   </style>
+  <script src="https://t.contentsquare.net/uxa/0b474c9dfd0e7.js"></script>
 </head>
 <body>
   <!-- Mobile Header -->
