--- a/cases/meddmax/index.html
+++ b/cases/meddmax/index.html
@@ -484,6 +484,7 @@
     .bg-red-light { background: #FEF2F2; color: #EF4444; }
     .text-green { color: #10B981; }
    </style>
+   <script src="https://t.contentsquare.net/uxa/0b474c9dfd0e7.js"></script>
 </head>
 <body>
   <!-- Mobile Header -->
