--- a/cases/other/index.html
+++ b/cases/other/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="../../style.css">
   <link rel="stylesheet" href="../../about.css">
   <link rel="stylesheet" href="../../cases.css?v=14">
+  <script src="https://t.contentsquare.net/uxa/0b474c9dfd0e7.js"></script>
 </head>
 <body>
   <!-- Mobile Header -->
