--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Briem+Hand:wght@200;400;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="about.css">
+  <script src="https://t.contentsquare.net/uxa/0b474c9dfd0e7.js"></script>
 </head>
 <body>
   <!-- Mobile Header -->
