--- a/cases/itreal/index.html
+++ b/cases/itreal/index.html
@@ -15,6 +15,7 @@
 
 
   </style>
+  <script src="https://t.contentsquare.net/uxa/0b474c9dfd0e7.js"></script>
 </head>
 <body>
   <!-- Mobile Header -->
