feat: add preloader to all pages for improved UX
Add a visual loading indicator that displays while page resources are being fetched. The preloader provides immediate feedback to users, enhancing perceived performance and reducing bounce rates.

- Insert preloader HTML markup in all main and case study pages
- Implement CSS with bounce animation for the spinner
- Add JavaScript logic to hide preloader after minimum display time
- Ensure preloader is removed from DOM after transition to free resources

--- a/cases/meddmax/index.html
+++ b/cases/meddmax/index.html
@@ -487,6 +487,14 @@
    <script src="https://t.contentsquare.net/uxa/0b474c9dfd0e7.js"></script>
 </head>
 <body>
+  <!-- Preloader -->
+  <div id="preloader">
+    <div class="spinner">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+  </div>
   <!-- Mobile Header -->
   <header class="mobile-header">
     <div class="mobile-logo">Portfolio</div>
