--- a/cases.html
+++ b/cases.html
@@ -225,7 +225,7 @@
              <div class="tech-stack">
               <span class="tech-tag" data-i18n="cases.realface.tech.1">Figma</span>
               <span class="tech-tag" data-i18n="cases.realface.tech.2">Prototyping</span>
-              <span class="tech-tag" data-i18n="cases.realface.tech.3">Relised</span>
+              <span class="tech-tag" data-i18n="cases.realface.tech.3">Released</span>
             </div>
           </div>
         </a>
@@ -469,7 +469,7 @@
       </div>
     </main>
   </div>
-  <script src="translations.js"></script>
+  <script src="translations.js?v=2"></script>
   <script src="script.js" defer></script>
 </body>
 </html>
