--- a/cases/itreal/index.html
+++ b/cases/itreal/index.html
@@ -25,6 +25,13 @@
 
   </style>
   <script src="https://t.contentsquare.net/uxa/0b474c9dfd0e7.js"></script>
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "vgsag03kac");
+  </script>
 </head>
 <body>
   <!-- Preloader -->
